# Covid-Online

./: README.md  pyproject.toml
analysis/: covid_heatmap.py  languages_viz.py  websites_visits.py
clean/: clean_analytics.py  clean_bls_data.py  clean_covid_data.py  datatype.py  link.py
collect/: analytics_data.py  auxilary_data.py  covid_data.py  jh_data.py  language_codes.py  utils.py
dashboard/: dashboard.py  prueba.py
data/: 2019_second-level-domain.csv  2019_second-level-domain_by_week.csv  2019_second-level-domain_sum.csv  2019_site_sum_sum.csv  2020_daily_covid_data.csv  2020_domain_by_week.csv  2020_hhs_totalvisits_by_week.csv  2020_second-level-domain.csv  2020_second-level-domain_sum.csv  2020_site_sum.csv  2021_hhs_totalvisits_by_week.csv  2021_monthly_covid_data.csv  2021_second-level-domain.csv  2021_second-level-domain_sum.csv  2021_site_sum.csv  2022_second-level-domain.csv  2022_second-level-domain_sum.csv  2022_site_sum.csv  cleaned_bls_data.csv
data/update_data/: 2021_total_hhsvisits_by_week.csv  2022_second-level-domain_by_week.csv
happy_app/: __main__.py
happy_app/analysis/: cdc_visits.py  covid_cases.py  covid_heatmap.py  covid_viz.py  dashboard_math.py  data_viz.py  domain_visits.py  hhs_visits.py  languages.py  languages_viz.py  social_referrals.py  test.csv  traffic_sources.py  visits_viz.py  websites_visits.py
happy_app/clean/: __main__.py  categorization_test.py  clean_analytics.py  clean_covid_data.py  create_source_categories.py  datatype.py  link.py
happy_app/collect/: analytics_data.py  auxilary_data.py  auxiliary_data.py  (+1 more)
(+61 files in other folders)
