[tool.poetry]
name = "30122-project-hap-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "30122_project_hap_py"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
requests = "^2.28.2"
pandas = "^1.5.3"
sodapy = "^2.2.0"
prettytable = "^3.6.0"
lxml = "^4.9.2"
regex = "^2022.10.31"
dash = "^2.8.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
