[tool.poetry]
name = "30122-project-hap-py"
version = "0.1.0"
description = ""
authors = ["claireboyd <claire.k.boyd@gmail.com>"]
readme = "README.md"
packages = [{include = "happy_app"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
dash = "^2.8.1"
dash-bootstrap-components = "^1.3.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
pandas = "^1.5.3"
requests = "^2.28.2"
regex = "^2022.10.31"
scipy = "^1.10.1"
lxml = "^4.9.2"
cssselect = "^1.2.0"
seaborn = "^0.12.2"
pywaffle = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
